--- a/CM/build.xml
+++ b/CM/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Client" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Client.</description>
+<project name="CM" default="default" basedir=".">
+    <description>Builds, tests, and runs the project CM.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
